--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
 dataclasses-json==0.5.14
+docx
 decorator==5.1.1
 faiss-cpu==1.7.4
 filelock==3.12.2
