--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ torch==2.0.1
 torchvision==0.15.2
 tornado==6.3.2
 tqdm==4.65.0
+tempfile
 transformers==4.31.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
