--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.3
 Pillow==9.5.0
+pypdf==3.15.4
 protobuf==4.23.4
 pyarrow==12.0.1
 pydantic==1.10.12
