--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,7 @@ typing_extensions==4.7.1
 tzdata==2023.3
 tzlocal==4.3.1
 urllib3==2.0.4
+unstructured
 validators==0.20.0
 watchdog==3.0.0
 yarl==1.9.2
