--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="dark"
-primaryColor="#F63366"
+primaryColor="#c2d4dd"
 backgroundColor="#87bdd8"
 secondaryBackgroundColor="#77a8a8"
 textColor="#262730"
