--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,13 @@ googleapis-common-protos==1.62.0
 greenlet==3.0.3
 grpcio==1.60.0
 grpcio-status==1.60.0
+gtts
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
 importlib-metadata==7.0.1
+io
 Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
@@ -36,6 +38,7 @@ langchain==0.1.4
 langchain-community==0.0.16
 langchain-core==0.1.16
 langchain-openai==0.0.5
+langdetect
 langsmith==0.0.83
 lxml==5.1.0
 markdown-it-py==3.0.0
