--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ langchain==0.1.4
 langchain-community==0.0.16
 langchain-core==0.1.16
 langchain-openai==0.0.5
+langchain_google_genai
 langdetect
 langsmith==0.0.83
 lxml==5.1.0
