--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ Pygments==2.17.2
 pypdf==4.0.0
 PyPDF2==3.0.1
 python-dateutil==2.8.2
+python-dotenv
 python-docx==1.1.0
 pytz==2023.3.post1
 PyYAML==6.0.1
